--- a/res/layout/home_fragment.xml
+++ b/res/layout/home_fragment.xml
@@ -132,20 +132,20 @@
 
                     <TextView
                         android:id="@+id/pm_type"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="5dp"
                         android:text="舒适"
                         android:textColor="#FFFFFF"
                         android:textSize="40dp" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent" 
-                        android:orientation="horizontal"
-                        android:layout_marginLeft="10dp">
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="10dp"
+                        android:orientation="horizontal" >
 
                         <TextView
                             android:layout_width="match_parent"
@@ -161,45 +161,53 @@
                             android:text="23"
                             android:textColor="#FFFFFF"
                             android:textSize="25dp" />
-                        <TextView 
+
+                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
                             android:text=" ug/m3"
                             android:textColor="#FFFFFF"
-                            android:textSize="20dp"
-                            android:layout_gravity="center_vertical"/>
+                            android:textSize="20dp" />
                     </LinearLayout>
                 </LinearLayout>
 
                 <View
-                    android:layout_marginTop="10dp"
                     android:layout_width="1dp"
                     android:layout_height="fill_parent"
+                    android:layout_marginTop="10dp"
                     android:background="#caf3ff" />
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.4" 
-                    android:gravity="center">
-                    
-                    <TextView android:layout_width="wrap_content"
+                    android:layout_weight="0.4"
+                    android:gravity="center" >
+
+                    <ImageView
+                        android:id="@+id/rain_img"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/aa" 
+                        android:visibility="invisible"/>
+
+                    <TextView
+                        android:id="@+id/rain_value"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="下雨"
-                        android:textSize="40dp"
-                        android:textColor="#FFFFFF"/>
-                    
+                        android:text="无雨"
+                        android:textColor="#FFFFFF"
+                        android:textSize="40dp" />
+
                 </LinearLayout>
             </LinearLayout>
-            
+
             <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
                 android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#caf3ff" />
-            
-            
-            
+                android:background="#caf3ff" />
         </LinearLayout>
     </LinearLayout>
 
