添加了自定义Toast（ToastShow），修改好了串口进程读数据问题（使用了StringBuilder将数据进行拼接）

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -32,5 +32,9 @@
         <item name="android:button">@drawable/my_checkbox</item> 
     </style>
 
+    <style name="toast_view">
+        <item name="@android:windowEnterAnimation">@animator/toast_in</item>
+        <item name="@android:windowExitAnimation">@animator/toast_out</item>
+    </style>
 
 </resources>
