--- a/res/layout/title.xml
+++ b/res/layout/title.xml
@@ -20,6 +20,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="智能宿舍"
+        android:textColor="#FFFFFF"
         android:textSize="30dp" />
 
     <TextView
